Overlay effect on mobile menu and close icon

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           
         </nav>
         <!--Mobile menu toggle-->
-        <div >
+        <div class="close-icon__z-show">
           <div class="hamburger-menu" onclick="toggleMobileMenu()">
           <div class="line"></div>
           <div class="line"></div>
@@ -100,6 +100,7 @@
           </div>
           
         </nav>
+        <div class="overlay"></div>
         <!--Contact info-->
         <div class="contact-info">
           <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
