--- a/ita/index.html
+++ b/ita/index.html
@@ -311,7 +311,7 @@
         <div class="footer-copyright-container__privacy">
           <a href="#">PRIVACY POLICY</a>
           <a href="#">COOKIES</a>
-          <div>
+        </div>
         </div>
     </footer>
     <script src="/script.js"></script>
