--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!--Contact info-->
         <div class="contact-info">
           <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
-          <span>+38268557150</span>
+          <a href="tel:+38268557150">+382 68 557 150</a>
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
@@ -223,7 +223,7 @@
     <div class="fourth-section"></div>
     <div class="montenegro-tours-sections">
       <h5 class="small-lightblue-subtitle">MONTENEGRO TOURS</h5>
-      <h2 class="large-title-heading">Find tours by category</h2>
+      <h2 class="large-title-heading find-tours">Find tours by category</h2>
       <p class="light-paragraph">
         There are many variations of passages of Lorem Ipsum available, but the
         majority.
@@ -289,9 +289,9 @@
             <h5>E-MAIL</h5>
             <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
             <h5>RESERVATIONS AND ORDERS</h5>
-            <span>+382 68 557 150</span>
-            <span>+382 69 841 905</span>
-            <span>+382 67 562 004</span>
+            <span class="footer-content__opacity">+382 68 557 150</span>
+            <span class="footer-content__opacity">+382 69 841 905</span>
+            <span class="footer-content__opacity">+382 67 562 004</span>
           </div>
           <div class="footer-info-container__content footer-quicklinks">
             <h3>Quick Links</h3>
