--- a/rus/index.html
+++ b/rus/index.html
@@ -106,7 +106,7 @@
         <!--Contact info-->
         <div class="contact-info">
           <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
-          <span>+38268557150</span>
+          <a href="tel:+38268557150">+382 68 557 150</a>
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
