--- a/ita/index.html
+++ b/ita/index.html
@@ -6,6 +6,12 @@
     <title>Sea Magic</title>
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
     <!--Meta data-->
   <meta name="description" content="Sea Magic - Description" />
   <meta property="og:title" content="Sea Magic" />
