--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
           <div class="flex-align flex-footer">
             <div class="social-icons">
               <img
-                src="images/facebook-icon.png"
+                src="/images/facebook-icon.png"
                 alt="facebook-icon"
                 width="14"
                 height="26"
@@ -376,7 +376,7 @@
             </div>
             <div class="social-icons">
               <img
-                src="images/instagram-icon.png"
+                src="/images/instagram-icon.png"
                 alt="instagram-icon"
                 width="26"
                 height="26"
@@ -384,7 +384,7 @@
             </div>
             <div class="social-icons">
               <img
-                src="images/tripadvisor-icon.png"
+                src="/images/tripadvisor-icon.png"
                 alt="trip-advisor-icon"
                 width="31"
                 height="20"
