--- a/tours/lady-of-the-rock-and-perast-old-town/index.html
+++ b/tours/lady-of-the-rock-and-perast-old-town/index.html
@@ -6,7 +6,7 @@
     <title>Sea Magic - Perast</title>
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/tours/lady-of-the-rock-and-perast-old-town/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -329,6 +329,6 @@
       </div>
     </footer>
     <script src="/script.js"></script>
-    <script src="script.js"></script>
+    <script src="/tours/lady-of-the-rock-and-perast-old-town/script.js"></script>
   </body>
 </html>
