--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!--Desktop menu-->
         <nav class="desktop-menu">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/tours/">Tours</a></li>
             <li class="dropdown">
               <a href="#">Attractions</a>
@@ -65,7 +65,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" onclick="toggleMobileMenu()">
+          <div class="hamburger-menu" >
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -93,7 +93,7 @@
             ></a>
           </ul>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/tours/">Tours</a></li>
             <li class="dropdown">
               <a href="#">Attractions</a>
