--- a/about-us/index.html
+++ b/about-us/index.html
@@ -66,7 +66,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" onclick="toggleMobileMenu()">
+          <div class="hamburger-menu" >
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -94,7 +94,7 @@
             ></a>
           </ul>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/tours/">Tours</a></li>
             <li class="dropdown">
               <a href="#">Attractions</a>
