--- a/it/index.html
+++ b/it/index.html
@@ -37,7 +37,7 @@
         <!--Desktop menu-->
         <nav class="desktop-menu">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
 <li><a href="/tours/">Tours</a></li>            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
@@ -63,7 +63,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" onclick="toggleMobileMenu()">
+          <div class="hamburger-menu" >
           <div class="line"></div>
           <div class="line"></div>
           <div class="line"></div>
@@ -84,7 +84,7 @@
         <a href="#" onclick="switchLanguage('ru')"><li data-lang="ru"><img src="/images/rus-icon.png" alt="rus-icon" /></li></a>
       </ul>
           <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="/">Home</a></li>
   <li><a href="/tours/">Tours</a></li>              <li class="dropdown">
                   <a href="#">Attractions</a>
                   <ul class="sub-menu">
