--- a/ru/index.html
+++ b/ru/index.html
@@ -37,7 +37,7 @@
         <!--Desktop menu-->
         <nav class="desktop-menu">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="tours">Tours</a></li>
             <li class="dropdown">
               <a href="#">Attractions</a>
@@ -64,7 +64,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" onclick="toggleMobileMenu()">
+          <div class="hamburger-menu" >
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -92,7 +92,7 @@
             ></a>
           </ul>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/tours/">Tours</a></li>
             <li class="dropdown">
               <a href="#">Attractions</a>
