--- a/tours/index.html
+++ b/tours/index.html
@@ -66,7 +66,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" onclick="toggleMobileMenu()">
+          <div class="hamburger-menu" >
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -94,7 +94,7 @@
             ></a>
           </ul>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/tours/">Tours</a></li>
             <li class="dropdown">
               <a href="#">Attractions</a>
@@ -116,7 +116,7 @@
                 <li><a href="#">Plava špilja</a></li>
               </ul>
             </li>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="/contact/">Contact</a></li>
           </ul>
           <div class="social-icons__mobile-menu">
             <a href="facebook.com"
