--- a/it/index.html
+++ b/it/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#">Plava špilja</a></li>
               </ul>
             </li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/contact/">Contact</a></li>
           </ul>
           
         </nav>
@@ -105,7 +105,7 @@
                       <li><a href="#">Plava špilja</a></li>
                   </ul>
               </li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/contact/">Contact</a></li>
           </ul>
           <div class="social-icons__mobile-menu">
             <a href="facebook.com"><img id="facebook-mobile" src="/images/facebook-icon.png" alt="facebook-icon" width="14" height="26"></a>
