Promjene na naslovnoj strani posle feedback-a

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img src="/images/eng-icon.png" alt="eng-icon" />
+          <img id="lng-icon-separate" src="/images/eng-icon.png" alt="eng-icon" />
           <ul class="language-menu">
             <li class="en-li" data-lang="en">
               <a class="en-a" href="#" onclick="switchLanguage('en')">
@@ -246,6 +246,7 @@
               People:<span style="color: #4b82ac"> 10 </span>
             </p>
           </div>
+          <hr>
           <div class="flex-align">
             <h2 class="small-title-heading">20.00 €</h2>
             <button>Details</button>
@@ -310,7 +311,7 @@
             height="229"
           />
           <div class="tours-catergory-content">
-            <h2 class="smallest-title-heading">Private Tours</h2>
+            <h2 >Private Tours</h2>
             <p class="light-paragraph">
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration words.
@@ -327,7 +328,7 @@
             height="229"
           />
           <div class="tours-catergory-content">
-            <h2 class="smallest-title-heading">Group Tours</h2>
+            <h2 >Group Tours</h2>
             <p class="light-paragraph">
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration words.
@@ -341,11 +342,137 @@
     <div class="reviews-section">
       <h5 class="small-lightblue-subtitle">REVIEWS</h5>
       <h2 class="large-title-heading">What our clients say?</h2>
-      <img
-        src="/images/reviews.png"
-        alt="reviews"
-        style="width: 100%; height: 100%"
-      />
+      <div class="reviews-containers reviews-spacing">
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar1.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar2.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar3.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+      </div>
+      <div class="reviews-containers">
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar1.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar2.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar3.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+      </div>
+      
     </div>
     <!--Footer section-->
     <footer>
