Vertical line by the language

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img id="lng-icon-separate" src="/images/eng-icon.png" alt="eng-icon" />
+          <img class="lng-icon-separate"  src="/images/eng-icon.png" alt="eng-icon" />
           <ul class="language-menu">
             <li class="en-li" data-lang="en">
               <a class="en-a" href="#" onclick="switchLanguage('en')">
