--- a/it/index.html
+++ b/it/index.html
@@ -124,7 +124,7 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img  id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
+          <img class="lng-icon-separate"  id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
           <ul class="language-menu">
               <li class="en-li" data-lang="en">
                   <a class=" en-a" href="#" onclick="switchLanguage('en')">
