--- a/tours/index.html
+++ b/tours/index.html
@@ -154,6 +154,7 @@
         <!--Language dropdown-->
         <div class="language-dropdown">
           <img
+          class="lng-icon-separate"
             id="language-icon"
             src="/images/eng-icon.png"
             alt="Language Icon"
