Promjene posle feedback-a, svg, razmaci, lightbox

--- a/contact/index.html
+++ b/contact/index.html
@@ -188,7 +188,7 @@
               src="/images/phone-icon.png"
               alt="phone icon"
             />
-            <p>+382 68 557 150 ; +382 69 841 905 ; +382 67 562 004</p>
+            <p><a href="tel:+382 68 557 150">+382 68 557 150 ;</a> <a href="tel:+382 69 841 905">+382 69 841 905</a>   <a href="tel:+382 67 562 004">; +382 67 562 004</a></p>
           </div>
           <div class="flex-align flex-align__row">
             <img
@@ -196,7 +196,7 @@
               src="/images/sms.png"
               alt="mail icon"
             />
-            <p>seamagickotor@gmail.com</p>
+            <a href="mailto:seamagickotor@gmail.com"><p>seamagickotor@gmail.com</p></a>
           </div>
           <div class="flex-align flex-align__row">
             <img
@@ -211,9 +211,9 @@
           <p>Monday - Sunday 06:00 - 24:00h</p>
         </div>
           <div class="flex-align contact-icons__big flex-align__row">
-            <img src="/images/facebook-contact.png" alt="facebook" />
-            <img src="/images/Instagram-contact.png" alt="instagram" />
-            <img src="/images/tripadvisor-contact.png" alt="tripadvisor" />
+            <img id="facebook-icon-contact" src="/images/facebook-icon.svg" alt="facebook" />
+            <img  id="instagram-icon-contact" src="/images/instagram-icon-blue.svg" alt="instagram" />
+            <img id="tripadvisor-icon-contact" src="/images/tripadvisor-icon-blue.svg" alt="tripadvisor" />
           </div>
         </div>
         <div class="contact-image__left">
