izmjene posle feedback-a

--- a/it/attraction/perast/index.html
+++ b/it/attraction/perast/index.html
@@ -6,6 +6,8 @@
     <title>Sea Magic - Perast</title>
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/lightbox/styles.css" />
+
     <link rel="stylesheet" href="/attraction/styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -295,7 +297,7 @@
           </div>
         </div>
       </footer>
-      <script src="/attraction/script.js"></script>
+      <script src="/lightbox/script.js"></script>
       <script src="/script.js"></script>
       
   </body>
