--- a/ru/attraction/perast/index.html
+++ b/ru/attraction/perast/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/attraction/styles/styles.css" />
+    <link rel="stylesheet" href="/lightbox/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -296,6 +297,7 @@
         </div>
       </footer>
       <script src="/script.js"></script>
-      <script src="/attraction/script.js"></script>
+      <script src="/lightbox/script.js"></script>
+
   </body>
 </html>
