--- a/ru/simple-page/index.html
+++ b/ru/simple-page/index.html
@@ -6,6 +6,7 @@
     <title>Sea Magic - Privacy policy</title>
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/lightbox/styles.css">
     <link rel="stylesheet" href="/simple-page/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -141,34 +142,30 @@
           <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
           <a href="tel:+38268557150">+382 68 557 150</a>
         </div>
-        <!--Language dropdown-->
+          <!--Language dropdown-->
         <div class="language-dropdown">
-          <img src="/images/eng-icon.png" alt="eng-icon" />
+          <img class="lng-icon-separate" id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
           <ul class="language-menu">
-            <li class="active-language__li" data-lang="en">
-              <a class="active-language__a" href="."
-                ><img src="/images/eng-icon.png" alt="eng-icon" /><span
-                  >English</span
-                >
-                <span class="check-mark">&#10004;</span></a
-              >
-            </li>
-            <li data-lang="ita">
-              <a href="it"
-                ><img src="/images/ita-icon.png" alt="ita-icon" /><span
-                  >Italian</span
-                ></a
-              >
-            </li>
-            <li data-lang="ru">
-              <a href="ru"
-                ><img src="/images/rus-icon.png" alt="rus-icon" /><span
-                  >Russian</span
-                ></a
-              >
-            </li>
+              <li class="en-li" data-lang="en">
+                  <a class=" en-a" href="#" onclick="switchLanguage('en')">
+                      <img src="/images/eng-icon.png" alt="eng-icon" /><span>English</span>
+                      <span class="check-mark"></span>
+                  </a>
+              </li>
+              <li class="it-li" data-lang="ita">
+                  <a class="it-a" href="#" onclick="switchLanguage('it')">
+                      <img src="/images/ita-icon.png" alt="ita-icon" /><span>Italian</span>
+                      <span class="check-mark"></span>
+                  </a>
+              </li>
+              <li class="ru-li" data-lang="ru">
+                  <a class="ru-a" href="#" onclick="switchLanguage('ru')">
+                      <img src="/images/rus-icon.png" alt="rus-icon" /><span>Russian</span>
+                      <span class="check-mark"></span>
+                  </a>
+              </li>
           </ul>
-        </div>
+      </div>
       </div>
     </header>
     <div class="hero-section"></div>
@@ -246,10 +243,32 @@
         </p>
       </div>
       <div class="flex-align">
-        <div id="simple-page-bg1" class="simple-page-bgimg"></div>
-        <div id="simple-page-bg2" class="simple-page-bgimg"></div>
-        <div id="simple-page-bg3" class="simple-page-bgimg"></div>
+        <div id="simple-page-bg1" class="simple-page-bgimg hover-shadow cursor" onclick="openModal();currentSlideG(1)"></div>
+        <div id="simple-page-bg2" class="simple-page-bgimg hover-shadow cursor" onclick="openModal();currentSlideG(2)"></div>
+        <div id="simple-page-bg3" class="simple-page-bgimg hover-shadow cursor" onclick="openModal();currentSlideG(3)"></div>
       </div>
+   
+    <!-- The Modal/Lightbox -->
+    <div id="myModal" class="modal">
+        <span class="close cursor" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+            <div class="mySlides">
+                <div class="numbertext">1 / 3</div>
+                <img src="/images/sunbathing-bg.png" style="width:100%">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">2 / 3</div>
+                <img src="/images/boat-image.png" style="width:100%">
+            </div>
+            <div class="mySlides">
+                <div class="numbertext">3 / 3</div>
+                <img src="/images/most-popular-tour.png" style="width:100%">
+            </div>
+            <!-- Next/previous controls -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+    </div>
     </div>
 
      <!--Footer section-->
@@ -326,5 +345,7 @@
         </div>
       </footer>
     <script src="/script.js"></script>
+    <script src="/lightbox/script.js"></script>
+
   </body>
 </html>
