--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/lightbox/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -40,7 +41,8 @@
         <nav class="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -65,7 +67,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" >
+          <div class="hamburger-menu">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -79,14 +81,23 @@
             <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
           </div>
           <ul class="language-menu">
-            
-<a href="#" onclick="switchLanguage('en')"><li data-lang="en"><img src="/images/eng-icon.png" alt="eng-icon" /></li></a>
-        <a href="#"onclick="switchLanguage('it')"><li data-lang="it"><img src="/images/ita-icon.png" alt="ita-icon" /></li></a>
-        <a href="#" onclick="switchLanguage('ru')"><li data-lang="ru"><img src="/images/rus-icon.png" alt="rus-icon" /></li></a>
+            <a href="#" onclick="switchLanguage('en')"
+              ><li data-lang="en">
+                <img src="/images/eng-icon.png" alt="eng-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('it')"
+              ><li data-lang="it">
+                <img src="/images/ita-icon.png" alt="ita-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('ru')"
+              ><li data-lang="ru">
+                <img src="/images/rus-icon.png" alt="rus-icon" /></li
+            ></a>
           </ul>
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -143,28 +154,39 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img class="lng-icon-separate" id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
+          <img
+            class="lng-icon-separate"
+            id="language-icon"
+            src="/images/eng-icon.png"
+            alt="Language Icon"
+          />
           <ul class="language-menu">
-              <li class="en-li" data-lang="en">
-                  <a class=" en-a" href="#" onclick="switchLanguage('en')">
-                      <img src="/images/eng-icon.png" alt="eng-icon" /><span>English</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="it-li" data-lang="ita">
-                  <a class="it-a" href="#" onclick="switchLanguage('it')">
-                      <img src="/images/ita-icon.png" alt="ita-icon" /><span>Italian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="ru-li" data-lang="ru">
-                  <a class="ru-a" href="#" onclick="switchLanguage('ru')">
-                      <img src="/images/rus-icon.png" alt="rus-icon" /><span>Russian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
+            <li class="en-li" data-lang="en">
+              <a class="en-a" href="#" onclick="switchLanguage('en')">
+                <img src="/images/eng-icon.png" alt="eng-icon" /><span
+                  >English</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="it-li" data-lang="ita">
+              <a class="it-a" href="#" onclick="switchLanguage('it')">
+                <img src="/images/ita-icon.png" alt="ita-icon" /><span
+                  >Italian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="ru-li" data-lang="ru">
+              <a class="ru-a" href="#" onclick="switchLanguage('ru')">
+                <img src="/images/rus-icon.png" alt="rus-icon" /><span
+                  >Russian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
           </ul>
-      </div>
+        </div>
       </div>
     </header>
 
@@ -180,27 +202,120 @@
       </p>
       <div class="image-grid image-grid1">
         <img
-          class="image-grid-col-2 image-grid-row-2"
+          class="image-grid-col-2 image-grid-row-2 hover-shadow cursor"
           src="/images/sunbathing-bg.png"
           alt="image"
+          onclick="openModal();currentSlideG(1)"
         />
-        <img src="/images/luka.png" alt="image" />
-        <img src="/images/most-popular-tour.png" alt="image" />
-        <img src="/images/people-on-boat.png" alt="image" />
-        <img src="/images/people-on-boat2.png" alt="image" />
+        <img
+          class="hover-shadow cursor"
+          src="/images/luka.png"
+          alt="image"
+          onclick="openModal();currentSlideG(2)"
+        />
+        <img
+          class="hover-shadow cursor"
+          src="/images/most-popular-tour.png"
+          alt="image"
+          onclick="openModal();currentSlideG(3)"
+        />
+        <img
+          class="hover-shadow cursor"
+          src="/images/people-on-boat.png"
+          alt="image"
+          onclick="openModal();currentSlideG(4)"
+        />
+        <img
+          class="hover-shadow cursor"
+          src="/images/people-on-boat2.png"
+          alt="image"
+          onclick="openModal();currentSlideG(5)"
+        />
       </div>
       <div class="image-grid image-grid2">
-        <img src="/images/luka.png" alt="image" />
-        <img src="/images/people-on-boat.png" alt="image" />
         <img
-          class="image-grid-col-2 image-grid-row-2"
+          class="hover-shadow cursor"
+          src="/images/luka.png"
+          alt="image"
+          onclick="openModal();currentSlideG(6)"
+        />
+        <img
+          class="hover-shadow cursor"
+          src="/images/people-on-boat.png"
+          alt="image"
+          onclick="openModal();currentSlideG(7)"
+        />
+        <img
+          class="image-grid-col-2 image-grid-row-2 hover-shadow cursor"
           src="/images/sunbathing-bg.png"
           alt="image"
+          onclick="openModal();currentSlideG(8)"
         />
-        <img src="/images/most-popular-tour.png" alt="image" />
-        <img src="/images/people-on-boat2.png" alt="image" />
+        <img
+          class="hover-shadow cursor"
+          src="/images/most-popular-tour.png"
+          alt="image"
+          onclick="openModal();currentSlideG(9)"
+        />
+        <img
+          class="hover-shadow cursor"
+          src="/images/people-on-boat2.png"
+          alt="image"
+          onclick="openModal();currentSlideG(10)"
+        />
+      </div>
+
+      <!-- The Modal/Lightbox -->
+      <div id="myModal" class="modal">
+        <span class="close cursor" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+          <div class="mySlides">
+            <div class="numbertext">1 / 10</div>
+            <img src="/images/sunbathing-bg.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">2 / 10</div>
+            <img src="/images/luka.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">3 / 10</div>
+            <img src="/images/most-popular-tour.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">4 / 10</div>
+            <img src="/images/people-on-boat.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">5 / 10</div>
+            <img src="/images/people-on-boat2.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">6 / 10</div>
+            <img src="/images/luka.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">7 / 10</div>
+            <img src="/images/people-on-boat.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">8 / 10</div>
+            <img src="/images/sunbathing-bg.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">9 / 10</div>
+            <img src="/images/most-popular-tour.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">10 / 10</div>
+            <img src="/images/people-on-boat2.png" style="width: 100%" />
+          </div>
+          <!-- Next/previous controls -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
       </div>
     </div>
+    
 
     <!--Footer section-->
     <footer>
@@ -276,5 +391,6 @@
       </div>
     </footer>
     <script src="/script.js"></script>
+    <script src="/lightbox/script.js"></script>
   </body>
 </html>
