--- a/ru/index.html
+++ b/ru/index.html
@@ -336,15 +336,141 @@
         </div>
       </div>
     </div>
-    <!--Reviews section-->
-    <div class="reviews-section">
+     <!--Reviews section-->
+     <div class="reviews-section">
       <h5 class="small-lightblue-subtitle">REVIEWS</h5>
       <h2 class="large-title-heading">What our clients say?</h2>
-      <img
-        src="/images/reviews.png"
-        alt="reviews"
-        style="width: 100%; height: 100%"
-      />
+      <div class="reviews-containers reviews-spacing">
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar1.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar2.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar3.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+      </div>
+      <div class="reviews-containers">
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar1.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar2.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+        <div class="single-review">
+          <div class="single-review__imageName">
+            <div>
+              <img src="/images/reviews/avatar3.png">
+            </div>
+            <div>
+              <h4 class="review-name">Alex M</h4>
+              <p class="review-date">14.07.2022</p>
+            </div>
+          </div>
+          <div class="review-stars">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+            <img src="/images/reviews/star.png">
+          </div>
+          <div class="review-desc">
+            There are many variations of passages of Lorem Ipsum available, but the majority in have suffered alteration words.
+          </div>
+        </div>
+      </div>
+      
     </div>
     <!--Footer section-->
     <footer>
