--- a/simple-page/index.html
+++ b/simple-page/index.html
@@ -6,7 +6,7 @@
     <title>Sea Magic - Privacy policy</title>
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/simple-page/styles.css" />
     <link rel="stylesheet" href="/lightbox/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
